--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-router": "^2.6.1",
     "socket.io": "^1.4.8",
     "socket.io-client": "^1.4.8",
+    "underscore": "^1.8.3",
     "webpack": "^1.13.1"
   },
   "devDependencies": {},
